--- a/Customer-module/src/main/resources/application-qa.properties
+++ b/Customer-module/src/main/resources/application-qa.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/customermoduleqa?createDatabaseIfNotExist=true&useUnicode=true
-spring.datasource.username= root
-spring.datasource.password= root
+spring.datasource.url=jdbc:mysql://database-1.c10w628y6471.us-east-2.rds.amazonaws.com:3306/customermoduleqa?createDatabaseIfNotExist=true&useUnicode=true
+spring.datasource.username= admin
+spring.datasource.password= Pradeep1996
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto= update
@@ -12,6 +12,6 @@ management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
 
 #EurekaServer
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://172.31.24.187:8761/eureka/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
