--- a/Delivery-Module/src/main/resources/application-dev.properties
+++ b/Delivery-Module/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 spring.application.name= Delivery-Module
 
-spring.datasource.url=jdbc:mysql://localhost:3306/customermoduledev?createTableIfNotExists=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://database-1.c10w628y6471.us-east-2.rds.amazonaws.com:3306/customermoduledev?createTableIfNotExists=true
+spring.datasource.username=admin
+spring.datasource.password=Pradeep1996
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -25,6 +25,6 @@ management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
 
 #eurekaserver
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://172.31.24.187:8761/eureka/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
