--- a/Delivery-Module/src/main/resources/application-qa.properties
+++ b/Delivery-Module/src/main/resources/application-qa.properties
@@ -1,8 +1,8 @@
 spring.application.name=Delivery-Module
 
-spring.datasource.url=jdbc:mysql://localhost:3306/deliverymoduleqa?createTableIfNotExists=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://database-1.c10w628y6471.us-east-2.rds.amazonaws.com:3306/deliverymoduleqa?createTableIfNotExists=true
+spring.datasource.username=admin
+spring.datasource.password=Pradeep1996
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -22,6 +22,6 @@ springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path = /swagger-ui.html
 
 #eurekaserver
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://172.31.24.187:8761/eureka/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
