--- a/Ecommerce-ZuulRouting/src/main/resources/application.properties
+++ b/Ecommerce-ZuulRouting/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Cloud-Gateway
 
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://172.31.24.187:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
@@ -15,11 +15,11 @@ spring.cloud.gateway.mvc.routes[0].uri=lb://Admin-Module
 spring.cloud.gateway.mvc.routes[0].predicates[0]=Path=api/user/**
 
 #spring.cloud.gateway.mvc.routes[1].id=Delivery-Module
-#spring.cloud.gateway.mvc.routes[1].uri=lb:// http://localhost:8085
+#spring.cloud.gateway.mvc.routes[1].uri=lb:// http://172.31.24.187:8085
 #spring.cloud.gateway.mvc.routes[1].predicates[0]=Path=/order**
 
 spring.cloud.gateway.mvc.routes[1].id=Delivery-Module
-spring.cloud.gateway.mvc.routes[1].uri=http://localhost:8085
+spring.cloud.gateway.mvc.routes[1].uri=http://172.31.24.187:8085
 spring.cloud.gateway.mvc.routes[1].predicates[0]=Path=/order/**
 #spring.cloud.gateway.mvc.routes[1].filters[0]=StripPrefix=1
 
