--- a/Seller-Module/src/main/resources/application.properties
+++ b/Seller-Module/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=Seller-Module
 
-spring.datasource.url=jdbc:mysql://localhost:3306/sellermod?createDatabaseIfNotExist=true&useUnicode=true
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://database-1.c10w628y6471.us-east-2.rds.amazonaws.com:3306/sellermod?createDatabaseIfNotExist=true&useUnicode=true
+spring.datasource.username=admin
 #enter the correct MySQL Password below
-spring.datasource.password=root
+spring.datasource.password=Pradeep1996
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
@@ -21,7 +21,7 @@ com.onlineshopping.image.folder.path=D://B2B_Images
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://172.31.24.187:8761/eureka/
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 
